<resources>
    <string name="app_name">The Player Sheet</string>
    <string name="image1">image1</string>
    <string name="image2">image2</string>
    <string name="image3">image3</string>
    <string name="image4">image4</string>
    <string name="expanded">Expanded!</string>
    <string name="hide">Hide</string>
    <string name="backgroundmountain">backgroundMountain</string>
    <string name="charactername">What is your name?</string>
    <string name="characterrace">What race are you?</string>
    <string name="characterbackground">What is your background?</string>
    <string name="characterclass">Which is your class?</string>
    <string name="charactertraits">Any traits?</string>
    <string name="characterideals">Write down your ideals</string>
    <string name="characterbonds">What bonds do you have?</string>
    <string name="characterflaws">What flaws do you possess?</string>
    <string name="charactertitle_name">Name</string>
    <string name="charactertitle_race">Race</string>
    <string name="charactertitle_subrace">Subrace</string>
    <string name="charactertitle_class">Class</string>
    <string name="charactertitle_background">Backgr.</string>
    <string name="charactertitle_traits">Traits</string>
    <string name="charactertitle_ideals">Ideals</string>
    <string name="charactertitle_bonds">Bonds</string>
    <string name="charactertitle_flaws">Flaws</string>
    <string name="default_value"></string>
    <string name="saved_name">se.andreasmikaelsson.thesheetver4.Name</string>
    <string name="saved_race">se.andreasmikaelsson.thesheetver4.RaceInt</string>
    <string name="saved_subrace">se.andreasmikaelsson.thesheetver4.SubraceInt</string>
    <string name="saved_class">se.andreasmikaelsson.thesheetver4.ClassInt</string>
    <string name="saved_background">se.andreasmikaelsson.thesheetver4.BackgroundInt</string>
    <string name="saved_traits">se.andreasmikaelsson.thesheetver4.Traits</string>
    <string name="saved_ideals">se.andreasmikaelsson.thesheetver4.Ideals</string>
    <string name="saved_bonds">se.andreasmikaelsson.thesheetver4.Bonds</string>
    <string name="saved_flaws">se.andreasmikaelsson.thesheetver4.Flaws</string>
    <string name="charactername_null"></string>
    <string name="characterrace_null"></string>
    <string name="characterclass_null"></string>
    <string name="characterbackground_null"></string>
    <string name="charactertraits_null"></string>
    <string name="characterideals_null"></string>
    <string name="characterbonds_null"></string>
    <string name="characterflaws_null"></string>
    <string name="roll">Roll!</string>
    <string name="clear">CLEAR</string>
    <string-array name="Races">
        <item>Dwarf</item>
        <item>Elf</item>
        <item>Halfling</item>
        <item>Human</item>
        <item>Dragonborn</item>
        <item>Gnome</item>
        <item>Half-Elf</item>
        <item>Half-Orc</item>
        <item>Tiefling</item>
    </string-array>
    <string-array name="Subraces_Dwarf">
        <item>Hill Dwarf</item>
        <item>Mountain Dwarf</item>
    </string-array>
    <string-array name="Subraces_Elf">
        <item>High Elf</item>
        <item>Wood Elf</item>
        <item>Dark Elf</item>
    </string-array>
    <string-array name="Subraces_Halfling">
        <item>Lightfoot</item>
        <item>Stout</item>
    </string-array>
    <string-array name="Subraces_Human">
        <item></item>
    </string-array>
    <string-array name="Subraces_Dragonborn">
        <item>Black</item>
        <item>Blue</item>
        <item>Brass</item>
        <item>Bronze</item>
        <item>Copper</item>
        <item>Gold</item>
        <item>Green</item>
        <item>Red</item>
        <item>Silver</item>
        <item>White</item>
    </string-array>
    <string-array name="Subraces_Gnome">
        <item>Forest Gnome</item>
        <item>Rock Gnome</item>
    </string-array>
    <string-array name="Subraces_HalfElf">
        <item></item>
    </string-array>
    <string-array name="Subraces_HalfOrc">
        <item></item>
    </string-array>
    <string-array name="Subraces_Tiefling">
        <item></item>
    </string-array>
    <string-array name="Classes">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rouge</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="Multiclasses">
        <item>Barbarian</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Fighter</item>
        <item>Monk</item>
        <item>Paladin</item>
        <item>Ranger</item>
        <item>Rouge</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>
    <string-array name="Backgrounds">
        <item>Acolyte</item>
        <item>Charlatan</item>
        <item>Criminal</item>
        <item>Entertainer</item>
        <item>Folk Hero</item>
        <item>Guild Artisan</item>
        <item>Hermit</item>
        <item>Noble</item>
        <item>Outlander</item>
        <item>Sage</item>
        <item>Sailor</item>
        <item>Soldier</item>
        <item>Urchin</item>
    </string-array>
    <string name="level_pb">XP / LVL / PB</string>
    <string name="hint_enter_xp">Enter xp</string>
    <string name="slash">/</string>
    <string name="underdash">_</string>
    <string-array name="Str_Skills">
        <item>x Athletics</item>
    </string-array>
    <string-array name="Dex_Skills">
        <item>x Acrobatics</item>
        <item>x Sleight of Hand</item>
        <item>x Stealth</item>
    </string-array>
    <string-array name="Con_Skills"></string-array>
    <string-array name="Int_Skills">
        <item>x Arcane</item>
        <item>x History</item>
        <item>x Investigation</item>
        <item>x Nature</item>
        <item>x Religion</item>
    </string-array>
    <string-array name="Wis_Skills">
        <item>x Animal Handling</item>
        <item>x Insight</item>
        <item>x Medicine</item>
        <item>x Perception</item>
        <item>x Survival</item>
    </string-array>
    <string-array name="Cha_Skills">
        <item>x Deception</item>
        <item>x Intimidation</item>
        <item>x Performance</item>
        <item>x Persuasion</item>
    </string-array>
    <string-array name="Save_Str_SkillsB">
        <item>se.andreasmikaelsson.thesheetver4.BAthletics</item>
    </string-array>
    <string-array name="Save_Dex_SkillsB">
        <item>se.andreasmikaelsson.thesheetver4.BAcrobatics</item>
        <item>se.andreasmikaelsson.thesheetver4.BSleight of Hand</item>
        <item>se.andreasmikaelsson.thesheetver4.BStealth</item>
    </string-array>
    <string-array name="Save_Con_SkillsB"></string-array>
    <string-array name="Save_Int_SkillsB">
        <item>se.andreasmikaelsson.thesheetver4.BArcane</item>
        <item>se.andreasmikaelsson.thesheetver4.BHistory</item>
        <item>se.andreasmikaelsson.thesheetver4.BInvestigation</item>
        <item>se.andreasmikaelsson.thesheetver4.BNature</item>
        <item>se.andreasmikaelsson.thesheetver4.BReligion</item>
    </string-array>
    <string-array name="Save_Wis_SkillsB">
        <item>se.andreasmikaelsson.thesheetver4.BAnimal Handling</item>
        <item>se.andreasmikaelsson.thesheetver4.BInsight</item>
        <item>se.andreasmikaelsson.thesheetver4.BMedicine</item>
        <item>se.andreasmikaelsson.thesheetver4.BPerception</item>
        <item>se.andreasmikaelsson.thesheetver4.BSurvival</item>
    </string-array>
    <string-array name="Save_Cha_SkillsB">
        <item>se.andreasmikaelsson.thesheetver4.BDeception</item>
        <item>se.andreasmikaelsson.thesheetver4.BIntimidation</item>
        <item>se.andreasmikaelsson.thesheetver4.BPerformance</item>
        <item>se.andreasmikaelsson.thesheetver4.BPersuasion</item>
    </string-array>
    <string-array name="Save_Str_SkillsS">
        <item>se.andreasmikaelsson.thesheetver4.SAthletics</item>
    </string-array>
    <string-array name="Save_Dex_SkillsS">
        <item>se.andreasmikaelsson.thesheetver4.SAcrobatics</item>
        <item>se.andreasmikaelsson.thesheetver4.SSleight of Hand</item>
        <item>se.andreasmikaelsson.thesheetver4.SStealth</item>
    </string-array>
    <string-array name="Save_Con_SkillsS"></string-array>
    <string-array name="Save_Int_SkillsS">
        <item>se.andreasmikaelsson.thesheetver4.SArcane</item>
        <item>se.andreasmikaelsson.thesheetver4.SHistory</item>
        <item>se.andreasmikaelsson.thesheetver4.SInvestigation</item>
        <item>se.andreasmikaelsson.thesheetver4.SNature</item>
        <item>se.andreasmikaelsson.thesheetver4.SReligion</item>
    </string-array>
    <string-array name="Save_Wis_SkillsS">
        <item>se.andreasmikaelsson.thesheetver4.SAnimal Handling</item>
        <item>se.andreasmikaelsson.thesheetver4.SInsight</item>
        <item>se.andreasmikaelsson.thesheetver4.SMedicine</item>
        <item>se.andreasmikaelsson.thesheetver4.SPerception</item>
        <item>se.andreasmikaelsson.thesheetver4.SSurvival</item>
    </string-array>
    <string-array name="Save_Cha_SkillsS">
        <item>se.andreasmikaelsson.thesheetver4.SDeception</item>
        <item>se.andreasmikaelsson.thesheetver4.SIntimidation</item>
        <item>se.andreasmikaelsson.thesheetver4.SPerformance</item>
        <item>se.andreasmikaelsson.thesheetver4.SPersuasion</item>
    </string-array>
    <string name="saved_xp">se.andreasmikaelsson.thesheetver4.Xp</string>
    <string name="saved_lvl">se.andreasmikaelsson.thesheetver4.Lvl</string>
    <string name="saved_pb">se.andreasmikaelsson.thesheetver4.Pb</string>
    <string name="saved_mod_str">se.andreasmikaelsson.thesheetver4.ModStr</string>
    <string name="saved_mod_dex">se.andreasmikaelsson.thesheetver4.ModDex</string>
    <string name="saved_mod_con">se.andreasmikaelsson.thesheetver4.ModCon</string>
    <string name="saved_mod_int">se.andreasmikaelsson.thesheetver4.ModInt</string>
    <string name="item_type_title">Choose an item type</string>
    <string name="weapon_name_title">Weapon name</string>
    <string name="enter_weapon_name">Enter weapon name</string>
    <string name="attack_bonus_title">Attack bonus</string>
    <string name="enter_attack_bonus">Enter attack bonus</string>
    <string name="damage_title">Damage</string>
    <string name="enter_damage">Enter damage</string>
    <string name="spell_name_title">Spell name</string>
    <string name="enter_spell_name">Enter spell name</string>
    <string name="spell_attack_bonus_title">Spell attack bonus</string>
    <string name="spell_description_title">Spell description</string>
    <string name="enter_spell_description">Enter spell description</string>
    <string name="spell_dc_title">Spell DC</string>
    <string name="enter_spell_dc">Enter spell DC</string>
    <string name="action_name_title">Action name</string>
    <string name="enter_action_name">Enter action name</string>
    <string name="action_attack_bonus_title">Action attack bonus</string>
    <string name="action_dc_title">Action DC</string>
    <string name="enter_action_DC">Enter action DC</string>
    <string name="action_description_title">Action description</string>
    <string name="enter_action_description">Enter action description</string>
    <string name="armor_name_title">Armor name</string>
    <string name="enter_armor_name">Enter armor name</string>
    <string name="armor_AC_title">Armor AC</string>
    <string name="enter_armor_ac">Enter armor AC</string>
    <string name="armor_description_title">Armor description</string>
    <string name="enter_armor_desc">Enter armor description</string>
</resources>