<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/expandlayout1"
    android:visibility="invisible">

    <ImageView
        android:id="@+id/expand1_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/accent_material_light"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        app:srcCompat="@drawable/vector_dragon"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hide"
        android:id="@+id/button_hide1"
        android:layout_gravity="center_horizontal|bottom"
        android:textColor="#FFF"
        android:background="#00ffffff" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/expandlayout11"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="30dp">

            <EditText
                android:id="@+id/editTextName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:paddingLeft="10dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:hint="@string/charactername"
                android:textColor="#fff"
                android:textColorHint="#fff"
                android:singleLine="false" />

            <TextView
                android:id="@+id/textViewNameTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/editTextName"
                android:layout_alignTop="@id/editTextName"
                android:gravity="end"
                android:text="@string/charactertitle_name"
                android:ems="8"
                android:textColor="#fff"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:id="@+id/spinnerRace"
                android:layout_below="@+id/editTextName"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                android:dropDownWidth="wrap_content"
                android:layout_alignEnd="@id/editTextName"
                android:layout_alignStart="@id/editTextName" />

            <TextView
                android:id="@+id/textViewRaceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/spinnerRace"
                android:layout_alignTop="@id/spinnerRace"
                android:gravity="end"
                android:text="@string/charactertitle_race"
                android:ems="8"
                android:textColor="#fff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/spinnerRace"
                android:layout_alignTop="@id/spinnerRace"
                android:text="@string/roll"
                android:id="@+id/button_roll_race"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="#FFF"
                android:background="#00ffffff" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:id="@+id/spinnerSubrace"
                android:layout_below="@+id/spinnerRace"
                android:layout_centerInParent="true"
                android:dropDownWidth="wrap_content"
                android:layout_alignEnd="@id/editTextName"
                android:layout_alignStart="@id/editTextName" />

            <TextView
                android:id="@+id/textViewSubraceTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/spinnerSubrace"
                android:layout_alignTop="@id/spinnerSubrace"
                android:gravity="end"
                android:text="@string/charactertitle_subrace"
                android:ems="8"
                android:textColor="#fff"/>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:paddingLeft="10dp"
                android:id="@+id/spinnerClass"
                android:layout_below="@+id/spinnerSubrace"
                android:layout_centerInParent="true"
                android:dropDownWidth="wrap_content"
                android:layout_alignEnd="@id/editTextName"
                android:layout_alignStart="@id/editTextName" />

            <TextView
                android:id="@+id/textViewClassTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/spinnerClass"
                android:layout_alignTop="@id/spinnerClass"
                android:gravity="end"
                android:text="@string/charactertitle_class"
                android:ems="8"
                android:textColor="#fff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/spinnerClass"
                android:layout_alignTop="@id/spinnerClass"
                android:text="@string/roll"
                android:id="@+id/button_roll_class"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="#FFF"
                android:background="#00ffffff"/>

            <Spinner
                android:id="@+id/spinnerBackground"
                android:layout_width="match_parent"
                android:paddingLeft="10dp"
                android:layout_height="50dp"
                android:layout_below="@+id/spinnerClass"
                android:layout_centerInParent="true"
                android:dropDownWidth="wrap_content"
                android:layout_alignEnd="@id/editTextName"
                android:layout_alignStart="@id/editTextName" />

            <TextView
                android:id="@+id/textViewBackgroundTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/spinnerBackground"
                android:layout_alignTop="@id/spinnerBackground"
                android:gravity="end"
                android:text="@string/charactertitle_background"
                android:ems="8"
                android:textColor="#fff"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/spinnerBackground"
                android:layout_alignTop="@id/spinnerBackground"
                android:text="@string/roll"
                android:id="@+id/button_roll_background"
                android:layout_gravity="center_horizontal|bottom"
                android:textColor="#FFF"
                android:background="#00ffffff"/>

            <EditText
                android:id="@+id/editTextTraits"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/spinnerBackground"
                android:hint="@string/charactertraits"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <TextView
                android:id="@+id/textViewTraitsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/editTextTraits"
                android:layout_alignTop="@id/editTextTraits"
                android:gravity="end"
                android:text="@string/charactertitle_traits"
                android:ems="8"
                android:textColor="#fff"/>

            <EditText
                android:id="@+id/editTextIdeals"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/editTextTraits"
                android:hint="@string/characterideals"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <TextView
                android:id="@+id/textViewIdealsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/editTextIdeals"
                android:layout_alignTop="@id/editTextIdeals"
                android:gravity="end"
                android:text="@string/charactertitle_ideals"
                android:ems="8"
                android:textColor="#fff"/>

            <EditText
                android:id="@+id/editTextBonds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/editTextIdeals"
                android:hint="@string/characterbonds"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <TextView
                android:id="@+id/textViewBondsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/editTextBonds"
                android:layout_alignTop="@id/editTextBonds"
                android:gravity="end"
                android:text="@string/charactertitle_bonds"
                android:ems="8"
                android:textColor="#fff"/>

            <EditText
                android:id="@+id/editTextFlaws"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="10dp"
                android:layout_centerInParent="true"
                android:inputType="textMultiLine"
                android:ems="10"
                android:layout_below="@+id/editTextBonds"
                android:hint="@string/characterflaws"
                android:textColor="#fff"
                android:textColorHint="#fff"/>

            <TextView
                android:id="@+id/textViewFlawsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@id/editTextFlaws"
                android:layout_alignTop="@id/editTextFlaws"
                android:gravity="end"
                android:text="@string/charactertitle_flaws"
                android:ems="8"
                android:textColor="#fff"/>

        </RelativeLayout>

    </ScrollView>

</FrameLayout>